[project]
name = "specter"
version = "0.1.2"
description = "Port Scanner with Service Fingerprinter"
authors = [
    {name = "Daniel Soriano",email = "sorianodanielb99@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "typer (>=0.20.1,<0.21.0)",
    "rich (>=14.2.0,<15.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "bandit (>=1.9.2,<2.0.0)",
    "pip-audit (>=2.10.0,<3.0.0)",
    "pyright (>=1.1.407,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 200
exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]
ignore = ["S101"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.poetry]
name = "specter"
version = "0.1.0"
description = "Port Scanner with Service Fingerprinter"
authors = ["Daniel Soriano"]
license = "MIT"

packages = [
    { include = "scanner" }
]

[tool.poetry.scripts]
specter = "scanner.cli.main:run"